Updated homepage layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>🐚 Ocean Memory</h1>
+  <h1>🐚 Ocean Memoryssss</h1>
   <p id="moves">Moves: 0</p>
   <div id="grid"></div>
   <button id="restart">New Game</button>
